--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SparePark"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
+        <activity
+            android:name=".view.parking_owner.OwnerMap"
+            android:exported="false"
+            android:label="@string/title_activity_owner_map" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
