--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -10,19 +14,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SparePark"
+        android:name="com.example.sparespark.MainApplication"
+        android:theme="@style/SpareParkTheme"
         tools:targetApi="31">
+
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
         <activity
-            android:name=".view.parking_owner.OwnerMap"
+            android:name="com.example.sparespark.view.parking_owner.OwnerMap"
             android:exported="false"
             android:label="@string/title_activity_owner_map" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.example.sparespark.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -34,6 +40,10 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <activity android:name="com.example.sparespark.view.admin.AdminLogin"/>
+
+        <activity android:name="com.example.sparespark.view.parking_owner.PhoneAuth"/>
     </application>
 
 </manifest>
