--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name="com.example.sparespark.MainApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,19 +15,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name="com.example.sparespark.MainApplication"
         android:theme="@style/SpareParkTheme"
         tools:targetApi="31">
 
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="${MAPS_API_KEY}" />
 
-        <activity
-            android:name="com.example.sparespark.view.parking_owner.OwnerMap"
-            android:exported="false"
-            android:label="@string/title_activity_owner_map" />
+
         <activity
             android:name="com.example.sparespark.MainActivity"
             android:exported="true">
@@ -40,10 +39,9 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
-        <activity android:name="com.example.sparespark.view.admin.AdminLogin"/>
-
-        <activity android:name="com.example.sparespark.view.parking_owner.PhoneAuth"/>
+        <activity android:name="com.example.sparespark.view.admin.AdminLogin" />
+        <activity android:name=".view.parking_owner.PhoneAuth" />
+        <activity android:name=".view.parking_owner.OwnerHome"/>
     </application>
 
 </manifest>
