--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -18,13 +18,10 @@
         android:theme="@style/SpareParkTheme"
         tools:targetApi="31">
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="${MAPS_API_KEY}" />
-
 
         <activity
             android:name="com.example.sparespark.MainActivity"
@@ -38,10 +35,16 @@
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
-        </activity>
-        <activity android:name="com.example.sparespark.view.admin.AdminLogin" />
+        </activity> <!-- User and Owner -->
         <activity android:name=".view.parking_owner.PhoneAuth" />
-        <activity android:name=".view.parking_owner.OwnerHome"/>
+        <activity
+            android:name=".view.parking_owner.OwnerHome"
+            android:launchMode="singleTop" />
+        <activity android:name=".view.user.UserHome" /> <!-- Admin -->
+        <activity android:name="com.example.sparespark.view.admin.AdminLogin" />
+        <activity
+            android:name=".view.admin.AdminHome"
+            android:launchMode="singleTop" />
     </application>
 
 </manifest>
